if (NOT DEFINED FIPS_ROOT_DIR)
	cmake_minimum_required(VERSION 3.1)
	get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
	include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
	fips_setup(PROJECT scas)
	fips_begin_app(scas cmdline)
	fips_src(src/)
	fips_src(standalone/)
	fips_end_app()
	install(TARGETS scas)
else()
	fips_begin_module(scas)
	fips_src(src/)
	fips_end_module()
endif()

fips_include_directories("${CMAKE_CURRENT_SOURCE_DIR}/headers")
